--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,12 @@
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/monolog-bundle": "^3.5",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.14"
     },
     "config": {
         "preferred-install": {
@@ -22,7 +25,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
+        },
+        "files": ["lib/transform.php"]
     },
     "autoload-dev": {
         "psr-4": {
