--- a/php.ini
+++ b/php.ini
@@ -924,9 +924,11 @@ default_socket_timeout = 60
 ;extension=pdo_oci
 ;extension=pdo_odbc
 ;extension=pdo_pgsql
-;extension=pdo_sqlite
+extension=pdo_sqlite
 ;extension=pgsql
 ;extension=shmop
+extension=iconv
+extension=ctype
 
 ; The MIBS data available in the PHP distribution must be installed.
 ; See http://www.php.net/manual/en/snmp.installation.php
