--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-pdo_sqlite": "*",
+        "dompdf/dompdf": "^0.8.3",
+        "mpdf/mpdf": "^8.0",
+        "semantic/ui": "^2.4",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/monolog-bundle": "^3.5",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "twig/twig": "3.0"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.14"
