Alterado prog-orc:calc para separara a tabela meta

--- a/pad-split.ini
+++ b/pad-split.ini
@@ -2,3 +2,8 @@
 [UniOrcamEntidades]
 cm = 101
 rpps = 1201
+
+[CnpjEntidades]
+cm = "12292535000162"
+pm = "87612826000190"
+rpps = "12091144000180"
