Modificado teste ddr-comprometido-liquidacao

--- a/contest/rules/ddr-comprometida-liquidacao.ini
+++ b/contest/rules/ddr-comprometida-liquidacao.ini
@@ -9,14 +9,16 @@ value[] = "select sum(pago)*-1 as valor from bal_desp"
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '6.3.1.3.%'"
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '6.3.2.1.%'"
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '2.1.8.8.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.1.05.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.03.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.1.1.01.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.03.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.1.05.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.01.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.03.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.1.1.01.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.03.%'"
 [total3]
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '2.1.%' and superavit_financ like 'F'"
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '2.2.%' and superavit_financ like 'F'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.1.05.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.03.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.1.1.01.%'"
-;value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.03.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.1.05.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.01.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.06.03.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.1.1.01.%'"
+value[] = "select (sum(saldo_final_debito) - sum(saldo_final_credito))*-1 as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '1.1.3.2.3.03.%'"
