--- a/contest/rules/pasep-a-pagar.ini
+++ b/contest/rules/pasep-a-pagar.ini
@@ -4,5 +4,5 @@ active = "1"
 [total1]
 value[] = "select (sum(saldo_final_credito) - sum(saldo_final_debito)) as valor from bal_ver where escrituracao like 'S' and conta_contabil_f like '2.1.4.1.3.11.02.%'"
 [total2]
-value[] = "select sum(liquidac.valor) as valor from liquidac inner join empenho on liquidac.nr_empenho = empenho.nr_empenho and empenho.ndo_f like '33 90 47 12%' and empenho.ano_empenho = $ano"
-value[] = "select sum(pagament.valor)*-1 as valor from pagament inner join empenho on pagament.nr_empenho = empenho.nr_empenho and empenho.ndo_f like '33 90 47 12%' and empenho.ano_empenho = $ano"
+value[] = "select sum(liquidac.valor) as valor from liquidac where liquidac.nr_empenho in (select distinct nr_empenho from empenho where empenho.ndo_f like '33 90 47 12%' and empenho.ano_empenho = $ano)"
+value[] = "select sum(pagament.valor)*-1 as valor from pagament where pagament.nr_empenho in (select distinct empenho.nr_empenho from empenho where empenho.ndo_f like '33 90 47 12%' and empenho.ano_empenho = $ano)"
